[gd_scene load_steps=7 format=3 uid="uid://cocywbhw24djy"]

[ext_resource type="Script" uid="uid://bevoulum02upb" path="res://BaseGun/base_gun.gd" id="1_kfdwl"]
[ext_resource type="PackedScene" uid="uid://bg25qr4h2wnf2" path="res://Entities/Bullet/bullet.tscn" id="2_4b1ks"]
[ext_resource type="Script" uid="uid://cc6nuxdd2v3n2" path="res://Resources/WeaponStats.gd" id="3_yhavq"]
[ext_resource type="Script" uid="uid://dlmc32eilsdt5" path="res://BaseGun/GunAimingComponent.gd" id="4_yhavq"]

[sub_resource type="Resource" id="Resource_fhrpw"]
script = ExtResource("3_yhavq")
firing_cooldown = 0.9
speed = 10
damage = 50.0
max_pierce = 1
knockback_force = 1.0
innacuracy = 10.0
metadata/_custom_type_script = "uid://cc6nuxdd2v3n2"

[sub_resource type="CylinderShape3D" id="CylinderShape3D_yhavq"]
radius = 10.0

[node name="BaseGun" type="Node3D"]
script = ExtResource("1_kfdwl")
bullet = ExtResource("2_4b1ks")
stats = SubResource("Resource_fhrpw")

[node name="CooldownTimer" type="Timer" parent="."]
autostart = true

[node name="GunAimingComponent" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("4_yhavq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GunAimingComponent"]
shape = SubResource("CylinderShape3D_yhavq")

[node name="Marker3D" type="Marker3D" parent="GunAimingComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.55271e-15, -0.995962)

[connection signal="body_entered" from="GunAimingComponent" to="GunAimingComponent" method="_on_body_entered"]
[connection signal="body_exited" from="GunAimingComponent" to="GunAimingComponent" method="_on_body_exited"]
